[build-system]
requires = [
    "setuptools>=61.0",
    "pyautogui>=0.9.53",
    "pytesseract>=0.3.9",
    "numpy>=1.21.5",
    "keyboard>=0.13.5",
    "clipboard>=0.0.4",
    "opencv-python==4.5.5.62",
    "pillow>=9.0.1",
    # "pywin32>=303",
    # "pywin32-ctypes>=0.2.0",
    "screeninfo>=0.8",
    "pyperclip>=1.8.2",
    "PyScreeze>=0.1.27",
]
build-backend = "setuptools.build_meta"

[project]
name = "AutoMonkey"
version = "0.2.1"
authors = [
  { name="Mihail-Cosmin Munteanu", email="munteanumihailcosmin@gmail.com" },
]
description = "Python Automation using Mouse and Keyboard, for the masses"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MihailCosmin/AutoMonkey"
"Bug Tracker" = "https://github.com/MihailCosmin/AutoMonkey/issues"